githuberror
5m 28s
    |
help: the leading underscore in `_last_error` marks it as unused, consider renaming it to `last_error`
    |
420 -         let mut _last_error = String::new();
420 +         let mut last_error = String::new();
    |
help: you might have meant to introduce a new binding
    |
437 |                     let last_error = format!("HTTP error: {}", response.status());
    |                     +++

error[E0425]: cannot find value `last_error` in this scope
   --> src/im/telegram.rs:440:21
    |
420 |         let mut _last_error = String::new();
    |                 ----------- `_last_error` defined here
...
440 |                     last_error = e.to_string();
    |                     ^^^^^^^^^^
    |
help: the leading underscore in `_last_error` marks it as unused, consider renaming it to `last_error`
    |
420 -         let mut _last_error = String::new();
420 +         let mut last_error = String::new();
    |
help: you might have meant to introduce a new binding
    |
440 |                     let last_error = e.to_string();
    |                     +++

error[E0425]: cannot find value `last_error` in this scope
   --> src/im/telegram.rs:447:43
    |
420 |         let mut _last_error = String::new();
    |                 ----------- `_last_error` defined here
...
447 |                     attempt, max_retries, last_error
    |                                           ^^^^^^^^^^
    |
help: the leading underscore in `_last_error` marks it as unused, consider renaming it to `last_error`
    |
420 -         let mut _last_error = String::new();
420 +         let mut last_error = String::new();
    |

warning: unused variable: `rx`
   --> src/im/dingtalk.rs:635:18
    |
635 |         let (tx, rx) = mpsc::channel::<String>(100);
    |                  ^^ help: if this is intentional, prefix it with an underscore: `_rx`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `skills` is never read
   --> src/skills.rs:349:26
    |
349 |         let mut skills = Vec::new();
    |                          ^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0425`.
warning: `ggclaw` (lib) generated 2 warnings
error: could not compile `ggclaw` (lib) due to 3 previous errors; 2 warnings emitted
failed to build aarch64-apple-darwin binary: failed to build app
       Error failed to build aarch64-apple-darwin binary: failed to build app
Error: Process completed with exit code 1.